# locusts

./: .dockerignore  .flake8  .gitignore  .mypy.ini  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
locusts/: __init__.py  _builder.py  _cli.py  _runner.py  _starter.py
scripts/: locust.config.json  locustfile.py
